--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Epicentrum</title>
     <link rel="stylesheet" href="css/main.css" />
     <script src="bower_components/modernizr/modernizr.js"></script>
+    <meta name="description" content="">
+    <meta name="keywords" content="">
   </head>
 
   <body>
