Add logo, background image and headline with call to action buttons.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Epicentrum</title>
+    <title>Epicentrum &mdash; koło naukowe studentów kierunku elektroniczne przetwarzanie informacji</title>
     <link rel="stylesheet" href="css/main.css" />
     <script src="bower_components/modernizr/modernizr.js"></script>
     <meta name="description" content="">
@@ -11,7 +11,20 @@
   </head>
 
   <body>
-    <p>Hello world!</p>
+    <header>
+      <img src="img/logo.svg" width="100" alt="Logo Epicentrum">
+    </header>
+
+    <section>
+      <h1><em>Epicentrum</em> to koło naukowe<br>zrzeszające studentów kierunku<br>elektroniczne przetwarzanie informacji.</h1>
+      <a href="#more"><button>Dowiedz się więcej</button></a>
+      <a href="#join"><button>Dołącz do nas</button></a>
+    </section>
+
+    <footer>
+      <p>&copy; 2015 Made with love by <a href="http://rafaltrzop.com/">rafaltrzop.com</a></p>
+    </footer>
+
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/foundation/js/foundation.min.js"></script>
     <script src="js/app.js"></script>
