Add some styles and Google Fonts

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Epicentrum &mdash; koło naukowe studentów kierunku elektroniczne przetwarzanie informacji</title>
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,700&subset=latin,latin-ext">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Exo&subset=latin,latin-ext">
     <script src="bower_components/modernizr/modernizr.js"></script>
     <meta name="description" content="">
     <meta name="keywords" content="">
@@ -12,13 +14,14 @@
 
   <body>
     <header>
-      <img src="img/logo.svg" width="100" alt="Logo Epicentrum">
+      <img src="img/logo.svg" id="logo" alt="Logo Epicentrum">
+      Epicentrum
     </header>
 
     <section>
       <h1><em>Epicentrum</em> to koło naukowe<br>zrzeszające studentów kierunku<br>elektroniczne przetwarzanie informacji.</h1>
-      <a href="#more"><button>Dowiedz się więcej</button></a>
-      <a href="#join"><button>Dołącz do nas</button></a>
+      <a href="#more" class="button-filled">Dowiedz się więcej</a>
+      <a href="#join" class="button-transparent">Dołącz do nas</a>
     </section>
 
     <footer>
