Add rows and styles for header (medium view)

--- a/index.html
+++ b/index.html
@@ -24,20 +24,22 @@
     </nav>
 
     <main id="slideout-panel">
-      <header class="clearfix">
+      <header class="clearfix row">
         <a href="index.html"><img src="img/logo.svg" id="logo" class="left" alt="Logo Epicentrum"></a>
         <span id="logotype">Epicentrum</span>
         <button class="slideout-toggle right">&#9776;</button>
       </header>
 
-      <section>
-        <h1><em>Epicentrum</em> to koło naukowe<br> zrzeszające studentów kierunku<br> elektroniczne przetwarzanie informacji.</h1>
-        <p>Zajmujemy się projektowaniem interfejsów oraz badaniem i opisywaniem zjawisk związanych z używaniem systemów komputerowych przez ludzi. Projektujemy aplikacje zorientowane na użytkownika zwracając przy tym szczególną uwagę na design, user experience oraz wysoką użyteczność i dostępność produktu końcowego. Działamy przy Wydziale Zarządzania i Komunikacji Społecznej Uniwersytetu Jagiellońskiego.</p>
-        <a href="#more" class="button-filled">Dowiedz się więcej</a>
-        <a href="#join" class="button-transparent">Dołącz do nas</a>
+      <section class="row small-collapse">
+        <div class="large-6 columns">
+          <h1><em>Epicentrum</em> to koło naukowe<br> zrzeszające studentów kierunku<br> elektroniczne przetwarzanie informacji.</h1>
+          <p>Zajmujemy się projektowaniem interfejsów oraz badaniem i opisywaniem zjawisk związanych z używaniem systemów komputerowych przez ludzi. Projektujemy aplikacje zorientowane na użytkownika zwracając przy tym szczególną uwagę na design, user experience oraz wysoką użyteczność i dostępność produktu końcowego. Działamy przy Wydziale Zarządzania i Komunikacji Społecznej Uniwersytetu Jagiellońskiego.</p>
+          <a href="#more" class="button-filled">Dowiedz się więcej</a>
+          <a href="#join" class="button-transparent">Dołącz do nas</a>
+        </div>
       </section>
 
-      <footer>
+      <footer class="row">
         <p>&copy; 2015 Made with love by <a href="http://rafaltrzop.com/">rafaltrzop.com</a></p>
       </footer>
     </main>
