Update slideout.js to v0.1.9 and make it open from right side of screen

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
         'panel': document.getElementById('slideout-panel'),
         'menu': document.getElementById('slideout-menu'),
         'padding': 256,
-        'tolerance': 70
-        //'side': "right" // this option probably will be added in slideout.js v0.1.8
+        'tolerance': 70,
+        'side': "right"
       });
 
       // Toggle button
