Disable slideout touch events

--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
         'menu': document.getElementById('slideout-menu'),
         'padding': 256,
         'tolerance': 70,
-        'side': "right"
+        'side': "right",
+        'touch': false
       });
 
       // Toggle button
