--- a/index.html
+++ b/index.html
@@ -49,16 +49,24 @@
       <header class="clearfix row">
         <a href="index.html"><img src="img/logo.svg" id="logo" class="left" alt="Logo Epicentrum"></a>
         <span id="logotype">Epicentrum</span>
-        <button class="slideout-toggle right">&#9776;</button>
+        <button class="slideout-toggle right hide-for-large-up">&#9776;</button>
+        <nav id="top-nav" class="right hide-for-small-only hide-for-medium-only">
+          <ul>
+            <li><a href="#o_nas">O nas</a></li>
+            <li><a href="#projekty">Projekty</a></li>
+            <li><a href="#pliki">Pliki</a></li>
+            <li><a href="#kontakt">Kontakt</a></li>
+          </ul>
+        </nav>
       </header>
 
       <section class="row small-collapse">
-        <div class="large-6 columns">
+        <!-- <div class="large-6 columns"> -->
           <h1><em>Epicentrum</em> to koło naukowe<br> zrzeszające studentów kierunku<br> elektroniczne przetwarzanie informacji.</h1>
           <p>Zajmujemy się projektowaniem interfejsów oraz badaniem i opisywaniem zjawisk związanych z używaniem systemów komputerowych przez ludzi. Projektujemy aplikacje zorientowane na użytkownika zwracając przy tym szczególną uwagę na design, user experience oraz wysoką użyteczność i dostępność produktu końcowego. Działamy przy Wydziale Zarządzania i Komunikacji Społecznej Uniwersytetu Jagiellońskiego.</p>
           <a href="#more" class="button-filled">Dowiedz się więcej</a>
           <a href="#join" class="button-transparent">Dołącz do nas</a>
-        </div>
+        <!-- </div> -->
       </section>
 
       <footer class="row">
