--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
     </nav>
 
     <main id="slideout-panel">
-      <header class="clearfix row">
+      <header class="row large-collapse clearfix">
         <a href="index.html"><img src="img/logo.svg" id="logo" class="left" alt="Logo Epicentrum"></a>
         <span id="logotype">Epicentrum</span>
         <button class="slideout-toggle right hide-for-large-up">&#9776;</button>
-        <nav id="top-nav" class="right hide-for-small-only hide-for-medium-only">
-          <ul>
+        <nav id="top-nav" class="large-6 columns right hide-for-small-only hide-for-medium-only">
+          <ul class="large-block-grid-4">
             <li><a href="#o_nas">O nas</a></li>
             <li><a href="#projekty">Projekty</a></li>
             <li><a href="#pliki">Pliki</a></li>
@@ -60,7 +60,7 @@
         </nav>
       </header>
 
-      <section class="row small-collapse">
+      <section class="row small-collapse"> <!-- collapse tylko gdy mamy jakies columns -->
         <!-- <div class="large-6 columns"> -->
           <h1><em>Epicentrum</em> to koło naukowe<br> zrzeszające studentów kierunku<br> elektroniczne przetwarzanie informacji.</h1>
           <p>Zajmujemy się projektowaniem interfejsów oraz badaniem i opisywaniem zjawisk związanych z używaniem systemów komputerowych przez ludzi. Projektujemy aplikacje zorientowane na użytkownika zwracając przy tym szczególną uwagę na design, user experience oraz wysoką użyteczność i dostępność produktu końcowego. Działamy przy Wydziale Zarządzania i Komunikacji Społecznej Uniwersytetu Jagiellońskiego.</p>
