--- a/index.html
+++ b/index.html
@@ -60,13 +60,11 @@
         </nav>
       </header>
 
-      <section class="row small-collapse"> <!-- collapse tylko gdy mamy jakies columns -->
-        <!-- <div class="large-6 columns"> -->
+      <section class="row">
           <h1><em>Epicentrum</em> to koło naukowe<br> zrzeszające studentów kierunku<br> elektroniczne przetwarzanie informacji.</h1>
-          <p>Zajmujemy się projektowaniem interfejsów oraz badaniem i opisywaniem zjawisk związanych z używaniem systemów komputerowych przez ludzi. Projektujemy aplikacje zorientowane na użytkownika zwracając przy tym szczególną uwagę na design, user experience oraz wysoką użyteczność i dostępność produktu końcowego. Działamy przy Wydziale Zarządzania i Komunikacji Społecznej Uniwersytetu Jagiellońskiego.</p>
+          <p id="welcome-text">Zajmujemy się projektowaniem interfejsów oraz badaniem i opisywaniem zjawisk związanych z używaniem systemów komputerowych przez ludzi. Projektujemy aplikacje zorientowane na użytkownika zwracając przy tym szczególną uwagę na design, user experience oraz wysoką użyteczność i dostępność produktu końcowego. Działamy przy Wydziale Zarządzania i Komunikacji Społecznej Uniwersytetu Jagiellońskiego.</p>
           <a href="#more" class="button-filled">Dowiedz się więcej</a>
           <a href="#join" class="button-transparent">Dołącz do nas</a>
-        <!-- </div> -->
       </section>
 
       <footer class="row">
