--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
       <header class="row large-collapse clearfix">
         <a href="index.html"><img src="img/logo.svg" id="logo" class="left" alt="Logo Epicentrum"></a>
         <span id="logotype">Epicentrum</span>
-        <button class="slideout-toggle right hide-for-large-up">&#9776;</button>
-        <nav id="top-nav" class="large-6 columns right hide-for-small-only hide-for-medium-only">
+        <button id="slideout-toggle" class="right hide-for-large-up">&#9776;</button>
+        <nav id="top-menu" class="large-6 columns right hide-for-small-only hide-for-medium-only">
           <ul class="large-block-grid-4">
             <li><a href="#o_nas">O nas</a></li>
             <li><a href="#projekty">Projekty</a></li>
@@ -84,7 +84,7 @@
       });
 
       // Toggle button
-      document.querySelector('.slideout-toggle').addEventListener('click', function() {
+      document.querySelector('#slideout-toggle').addEventListener('click', function() {
         slideout.toggle();
       });
     </script>
