Remove repetition of word in the text

--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
       </header>
 
       <section class="row">
-          <h1><em>Epicentrum</em> to koło naukowe<br> zrzeszające studentów kierunku<br> elektroniczne przetwarzanie informacji.</h1>
-          <p id="welcome-text">Zajmujemy się projektowaniem interfejsów oraz badaniem i opisywaniem zjawisk związanych z używaniem systemów komputerowych przez ludzi. Projektujemy aplikacje zorientowane na użytkownika zwracając przy tym szczególną uwagę na design, user experience oraz wysoką użyteczność i dostępność produktu końcowego. Działamy przy Wydziale Zarządzania i Komunikacji Społecznej Uniwersytetu Jagiellońskiego.</p>
-          <a href="#more" class="button-filled">Dowiedz się więcej</a>
-          <a href="#join" class="button-transparent">Dołącz do nas</a>
+        <h1><em>Epicentrum</em> to koło naukowe<br> zrzeszające studentów kierunku<br> elektroniczne przetwarzanie informacji.</h1>
+        <p id="welcome-text">Zajmujemy się projektowaniem interfejsów oraz badaniem i opisywaniem zjawisk związanych z używaniem systemów komputerowych przez ludzi. Tworzymy aplikacje zorientowane na użytkownika zwracając przy tym szczególną uwagę na design, user experience oraz wysoką użyteczność i dostępność produktu końcowego. Działamy przy Wydziale Zarządzania i Komunikacji Społecznej Uniwersytetu Jagiellońskiego.</p>
+        <a href="#more" class="button-filled">Dowiedz się więcej</a>
+        <a href="#join" class="button-transparent">Dołącz do nas</a>
       </section>
 
       <footer class="row">
