Change title, add description and keywords

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Epicentrum &mdash; koło naukowe studentów kierunku elektroniczne przetwarzanie informacji</title>
+    <title>Epicentrum &mdash; koło naukowe studentów kierunku EPI UJ</title>
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="bower_components/slideout.js/index.css">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,700&subset=latin,latin-ext">
@@ -31,8 +31,8 @@
     <meta name="msapplication-TileImage" content="/img/favicons/mstile-144x144.png">
     <meta name="msapplication-config" content="/img/favicons/browserconfig.xml">
 
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <meta name="description" content="Epicentrum to koło naukowe zrzeszające studentów kierunku elektroniczne przetwarzanie informacji działające przy Wydziale Zarządzania i Komunikacji Społecznej Uniwersytetu Jagiellońskiego.">
+    <meta name="keywords" content="epi, elektroniczne przetwarzanie informacji, epicentrum, epizody, koło naukowe, uj, uniwersytet jagielloński, kraków">
   </head>
 
   <body>
