--- a/index.html
+++ b/index.html
@@ -33,6 +33,18 @@
 
     <meta name="description" content="Epicentrum to koło naukowe zrzeszające studentów kierunku elektroniczne przetwarzanie informacji działające przy Wydziale Zarządzania i Komunikacji Społecznej Uniwersytetu Jagiellońskiego.">
     <meta name="keywords" content="epi, elektroniczne przetwarzanie informacji, epicentrum, epizody, koło naukowe, uj, uniwersytet jagielloński, kraków">
+
+    <!-- Google Analytics -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-63940702-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
   </head>
 
   <body>
