--- a/index.html
+++ b/index.html
@@ -1,108 +1,9 @@
-<!doctype html>
-<html class="no-js" lang="pl">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Epicentrum &mdash; koło naukowe studentów kierunku EPI UJ</title>
-    <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="bower_components/slideout.js/index.css">
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,700&subset=latin,latin-ext">
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Exo&subset=latin,latin-ext">
-    <script src="bower_components/modernizr/modernizr.js"></script>
-
-    <!-- www.realfavicongenerator.net -->
-    <link rel="apple-touch-icon" sizes="57x57" href="/img/favicons/apple-touch-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/img/favicons/apple-touch-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/img/favicons/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/img/favicons/apple-touch-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/img/favicons/apple-touch-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/img/favicons/apple-touch-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/img/favicons/apple-touch-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/img/favicons/apple-touch-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/img/favicons/apple-touch-icon-180x180.png">
-    <link rel="icon" type="image/png" href="/img/favicons/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="/img/favicons/favicon-194x194.png" sizes="194x194">
-    <link rel="icon" type="image/png" href="/img/favicons/favicon-96x96.png" sizes="96x96">
-    <link rel="icon" type="image/png" href="/img/favicons/android-chrome-192x192.png" sizes="192x192">
-    <link rel="icon" type="image/png" href="/img/favicons/favicon-16x16.png" sizes="16x16">
-    <link rel="manifest" href="/img/favicons/manifest.json">
-    <link rel="shortcut icon" href="/img/favicons/favicon.ico">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="/img/favicons/mstile-144x144.png">
-    <meta name="msapplication-config" content="/img/favicons/browserconfig.xml">
-
-    <meta name="description" content="Epicentrum to koło naukowe zrzeszające studentów kierunku elektroniczne przetwarzanie informacji działające przy Wydziale Zarządzania i Komunikacji Społecznej Uniwersytetu Jagiellońskiego.">
-    <meta name="keywords" content="epi, elektroniczne przetwarzanie informacji, epicentrum, epizody, koło naukowe, uj, uniwersytet jagielloński, kraków">
-
-    <!-- Google Analytics -->
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-63940702-1', 'auto');
-      ga('send', 'pageview');
-
-    </script>
-  </head>
-
-  <body>
-    <nav id="slideout-menu">
-      <ul>
-        <li><a href="#o_nas">O nas</a></li>
-        <li><a href="#projekty">Projekty</a></li>
-        <li><a href="#pliki">Pliki</a></li>
-        <li><a href="#kontakt">Kontakt</a></li>
-      </ul>
-    </nav>
-
-    <main id="slideout-panel">
-      <header class="row large-collapse clearfix">
-        <a href="index.html"><img src="img/logo.svg" id="logo" class="left" alt="Logo Epicentrum"></a>
-        <span id="logotype">Epicentrum</span>
-        <button id="slideout-toggle" class="right hide-for-large-up">&#9776;</button>
-        <nav id="top-menu" class="large-6 columns right hide-for-small-only hide-for-medium-only">
-          <ul class="large-block-grid-4">
-            <li><a href="#o_nas">O nas</a></li>
-            <li><a href="#projekty">Projekty</a></li>
-            <li><a href="#pliki">Pliki</a></li>
-            <li><a href="#kontakt">Kontakt</a></li>
-          </ul>
-        </nav>
-      </header>
-
-      <section class="row">
-        <h1><em>Epicentrum</em> to koło naukowe<br> zrzeszające studentów kierunku<br> elektroniczne przetwarzanie informacji.</h1>
-        <p id="welcome-text">Zajmujemy się projektowaniem interfejsów oraz badaniem i opisywaniem zjawisk związanych z używaniem systemów komputerowych przez ludzi. Tworzymy aplikacje zorientowane na użytkownika zwracając przy tym szczególną uwagę na design, user experience oraz wysoką użyteczność i dostępność produktu końcowego. Działamy przy Wydziale Zarządzania i Komunikacji Społecznej Uniwersytetu Jagiellońskiego.</p>
-        <a href="#more" class="button-filled">Dowiedz się więcej</a>
-        <a href="#join" class="button-transparent">Dołącz do nas</a>
-      </section>
-
-      <footer class="row">
-        <p>&copy; 2015 Made with love by <a href="http://rafaltrzop.com/">rafaltrzop.com</a></p>
-      </footer>
-    </main>
-
-    <script src="bower_components/slideout.js/dist/slideout.min.js"></script>
-    <script>
-      var slideout = new Slideout({
-        'panel': document.getElementById('slideout-panel'),
-        'menu': document.getElementById('slideout-menu'),
-        'padding': 256,
-        'tolerance': 70,
-        'side': "right",
-        'touch': false
-      });
-
-      // Toggle button
-      document.querySelector('#slideout-toggle').addEventListener('click', function() {
-        slideout.toggle();
-      });
-    </script>
-
-    <script src="bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="bower_components/foundation/js/foundation.min.js"></script>
-    <script src="js/app.js"></script>
-  </body>
-</html>
+---
+layout: default
+---
+<section class="row">
+  <h1><em>Epicentrum</em> to koło naukowe<br> zrzeszające studentów kierunku<br> elektroniczne przetwarzanie informacji.</h1>
+  <p id="welcome-text">Zajmujemy się projektowaniem interfejsów oraz badaniem i opisywaniem zjawisk związanych z używaniem systemów komputerowych przez ludzi. Tworzymy aplikacje zorientowane na użytkownika zwracając przy tym szczególną uwagę na design, user experience oraz wysoką użyteczność i dostępność produktu końcowego. Działamy przy Wydziale Zarządzania i Komunikacji Społecznej Uniwersytetu Jagiellońskiego.</p>
+  <a href="#more" class="button-filled">Dowiedz się więcej</a>
+  <a href="#join" class="button-transparent">Dołącz do nas</a>
+</section>
