--- a/contact.html
+++ b/contact.html
@@ -36,30 +36,28 @@ layout: index
 
   <script src="https://maps.googleapis.com/maps/api/js"></script>
   <script>
-    function initialize() {
+    function initializeGoogleMap() {
       var myLatlng = new google.maps.LatLng(50.029939, 19.908307);
-      var mapCanvas = document.getElementById('map-canvas');
+      var mapCanvas = document.getElementById('google-map-canvas');
       var mapOptions = {
         center: myLatlng,
         zoom: 17,
         mapTypeId: google.maps.MapTypeId.ROADMAP,
-        disableDefaultUI: true
+        styles: [{"stylers":[{"visibility":"on"},{"saturation":-100},{"gamma":0.54}]},{"featureType":"road","elementType":"labels.icon","stylers":[{"visibility":"off"}]},{"featureType":"water","stylers":[{"color":"#4d4946"}]},{"featureType":"poi","elementType":"labels.icon","stylers":[{"visibility":"off"}]},{"featureType":"poi","elementType":"labels.text","stylers":[{"visibility":"simplified"}]},{"featureType":"road","elementType":"geometry.fill","stylers":[{"color":"#ffffff"}]},{"featureType":"road.local","elementType":"labels.text","stylers":[{"visibility":"simplified"}]},{"featureType":"water","elementType":"labels.text.fill","stylers":[{"color":"#ffffff"}]},{"featureType":"transit.line","elementType":"geometry","stylers":[{"gamma":0.48}]},{"featureType":"transit.station","elementType":"labels.icon","stylers":[{"visibility":"off"}]},{"featureType":"road","elementType":"geometry.stroke","stylers":[{"gamma":7.18}]}]
       }
-
       var map = new google.maps.Map(mapCanvas, mapOptions)
-
       var marker = new google.maps.Marker({
           position: myLatlng,
           map: map
       });
     }
 
-    google.maps.event.addDomListener(window, 'load', initialize);
+    google.maps.event.addDomListener(window, 'load', initializeGoogleMap);
   </script>
 
   <div class="row small-collapse large-uncollapse">
     <div class="large-12 columns">
-      <div id="map-canvas"></div>
+      <div id="google-map-canvas"></div>
     </div>
   </div>
 </section>
