Complete contact page

--- a/contact.html
+++ b/contact.html
@@ -6,11 +6,11 @@ layout: index
     <div class="large-4 columns">
       <h1>Kontakt</h1>
       <p>
-        Chcesz do nas dołączyć? Masz pomysł na spotkanie?
-        Chcesz podzielić się swoją wiedzą z innymi?
-        A może chciałbyś zostać naszym sponsorem i w ten sposób promować swoją firmę?
-        Napisz do Nas!
+        Chcesz do nas dołączyć?<br>
+        Masz pomysł na prelekcję?<br>
+        A może chciałbyś zostać naszym sponsorem?
       </p>
+      <p>E-mail: <a href="mailto:kn.epicentrum@gmail.com">kn.epicentrum@gmail.com</a></p>
     </div>
 
     <div class="large-4 columns">
@@ -25,11 +25,11 @@ layout: index
     </div>
 
     <div class="large-4 columns">
-      <h1>Skontaktuj się</h1>
+      <h1>My w sieci</h1>
       <p>
-        E-mail: <a href="mailto:kn.epicentrum@gmail.com">kn.epicentrum@gmail.com</a><br>
-        Facebook: <a href="www.facebook.com/kn.epicentrum">fb.com/kn.epicentrum</a><br>
-        Strona kierunku EPI: <a href="http://www.epi.uj.edu.pl">epi.uj.edu.pl</a>
+        Facebook koła: <a href="http://www.facebook.com/kn.epicentrum">fb.com/kn.epicentrum</a><br>
+        Facebook EPI UJ: <a href="http://www.facebook.com/epi.uj">fb.com/epi.uj</a><br>
+        Strona kierunku: <a href="http://www.epi.uj.edu.pl">epi.uj.edu.pl</a>
       </p>
     </div>
   </div>
@@ -47,8 +47,9 @@ layout: index
       }
       var map = new google.maps.Map(mapCanvas, mapOptions)
       var marker = new google.maps.Marker({
-          position: myLatlng,
-          map: map
+        position: myLatlng,
+        map: map,
+        title: 'Koło Naukowe Epicentrum'
       });
     }
 
