Complete files page

--- a/files.html
+++ b/files.html
@@ -1,6 +1,32 @@
 ---
-layout: subpage
+layout: index
 ---
-<section class="row">
-  <h1>Pliki</h1>
+<section>
+  <div class="row small-collapse large-uncollapse">
+    <div class="large-6 columns">
+      <h1>Statut koła</h1>
+      <p>
+        Statut to najważniejszy z aktów prawnych każdego koła naukowego regulujący zadania, strukturę organizacyjną i sposób działania. Nasz statut znajdziesz tutaj w <a href="download/Statut%20koła%20naukowego%20Epicentrum.pdf">formacie PDF</a> oraz <a href="download/Statut%20koła%20naukowego%20Epicentrum.docx">DOCX</a> umożliwiającym edycje.
+      </p>
+    </div>
+
+    <div class="large-6 columns">
+      <h1>Logo</h1>
+      <p>
+        Logo może składać się z sygnetu, logotypu oraz tagline. Sygnet to element graficzny reprezentujący organizację, logotyp to część typograficzna. Tagline natomiast to hasło umieszczane zazwyczaj pod logotypem. Pojedyncze elementy takie jak sygnet lub logotyp mogą tworzyć logo.
+      </p>
+      <p>
+        Sygnet: <a href="download/Sygnet%20Epicentrum%20(format%20PNG).zip">PNG</a> + <a href="download/Sygnet%20Epicentrum%20(format%20SVG).zip">SVG</a> + <a href="download/Sygnet%20Epicentrum%20(format%20PSD).psd">PSD</a>
+      </p>
+    </div>
+  </div>
+
+  <div class="row small-collapse large-uncollapse">
+    <div class="large-6 columns">
+      <h1>Pliki źródłowe</h1>
+      <p>
+        Źródła większości z naszych projektów typu open source znajdziesz na stronie <a href="http://github.com/epicentrum">organizacji Epicentrum</a> w serwisie GitHub. Jest tam nawet kod strony, którą właśnie czytasz. Zachęcamy do wsparcia naszych projektów zarówno swoim czasem jak i wiedzą.
+      </p>
+    </div>
+  </div>
 </section>
