First draft of about page

--- a/about.html
+++ b/about.html
@@ -1,6 +1,77 @@
 ---
-layout: subpage
+layout: index
 ---
-<section class="row">
-  <h1>O nas</h1>
+<section>
+  <div class="row small-collapse large-uncollapse">
+    <div class="large-8 columns">
+      <h1>Historia</h1>
+      <p>
+        Koło naukowe Epicentrum powstało na przełomie marca i kwietnia 2006 roku z inicjatywy grupy studentów drugiego roku kierunku Kulturoznawstwo o specjalności Elektroniczne Przetwarzanie Informacji. W **** roku kierunek ten zmienił swoją nazwę i obecnie korzysta z miana samej specjalności.
+      </p>
+      <p>
+        Pierwszym opiekunem naukowym koła został prof. dr hab. Wiesław Lubaszewski, to właśnie pod jego pieczą stanowisko prezesa koła sprawowała Joanna Bukowska-Palarz. W tym czasie powstało także logo i pieczęć koła, które zaprojektował ****.
+      </p>
+      <p>
+        Od wiosny 2012 roku organizujemy spotkania ze specjalistami branży interaktywnej i IT pod szyldem wydarzeń o nazwie Epizody. W 2015 roku powstała zupełnie nowa strona internetowa koła. Koło działa nieprzerwanie do dnia dzisiejszego.
+      </p>
+
+      <h1>Cele koła</h1>
+      <p>
+        Celami Koła są:<br>
+        a) poszerzanie wiedzy i umiejętności studentów<br>
+        b) pomoc w nauce i rozwój form samokształcenia<br>
+        c) rozwijanie zainteresowań naukowych studentów<br>
+        d) wdrażanie studentów do pracy naukowej i badawczej<br>
+        e) zwiększanie możliwości dostępu do nowych technologii
+      </p>
+
+      <h1>Sekcje</h1>
+      <p>
+        Koło opera swoją działalność na sekcjach. Sekcja jest powoływana do zrealizowania konkretnego projektu. Działalność sekcji może mieć charakter długoterminowy w przypadku projektów realizowanych cyklicznie, lub jednorazowy, wtedy zostaje ona rozwiązana bezpośrednio po zakończeniu projektu. Konsultantem naukowym sekcji może być pracownik naukowy lub doktorant dowolnej uczelni.
+      </p>
+    </div>
+
+    <div class="large-4 columns">
+      <h1>O nas</h1>
+      <p>
+        <b>Opiekun naukowy koła:</b><br>
+        mgr inż. Aleksander Smywiński-Pohl
+      </p>
+
+      <p>
+        <b>Zarząd koła:</b><br>
+        Prezes: Damian Kałwa <a href="mailto:dkalwa@gmail.com">dkalwa@gmail.com</a><br>
+        Pełnomocnik ds. organizacyjnych: Kinga Cepielik<br>
+        Pełnomocnik ds. naukowych: Ryszard Czernecki<br>
+        Sekretarz: Julia Pukalska<br>
+        Skarbnik: Anna Bogusz
+      </p>
+
+      <p>
+        <b>Członkowie koła:</b>
+        <ol>
+          <li>Agata Redyk</li>
+          <li>Agnieszka Rączka</li>
+          <li>Anna Bogusz</li>
+          <li>Anna Wróbel</li>
+          <li>Damian Kałwa</li>
+          <li>Dorota Kuśmierz</li>
+          <li>Grzesiek Stefański</li>
+          <li>Iwona Guguła</li>
+          <li>Joanna Jadach</li>
+          <li>Joanna Sierant</li>
+          <li>Jola Klima</li>
+          <li>Julka Puk</li>
+          <li>Justyna Rząca</li>
+          <li>Karolina Piekarz</li>
+          <li>Kasia Sordyl</li>
+          <li>Kinga Cepielik</li>
+          <li>Rafał Trzop</li>
+          <li>Ryszard Czernecki</li>
+          <li>Urszula Witkowicz</li>
+          <li>Zuza Drohomirecka</li>
+        </ol>
+      </p>
+    </div>
+  </div>
 </section>
