Delete subpage layout and use default

--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,10 @@
 ---
-layout: subpage
+layout: default
 ---
-<section class="row">
-  <h1>Projekty</h1>
+<section>
+  <div class="row small-collapse large-uncollapse">
+    <div class="large-4 columns">
+      <h1>Projekty</h1>
+    </div>
+  </div>
 </section>
