--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 ---
-layout: index
+layout: default
 ---
 <section class="row small-collapse large-uncollapse">
   <div class="small-12 columns">
-    <h1 id="landing-page"><em>Epicentrum</em> to koło naukowe<br> zrzeszające studentów kierunku<br> elektroniczne przetwarzanie informacji</h1>
-    <p id="welcome-text">Zajmujemy się projektowaniem interfejsów oraz badaniem i opisywaniem zjawisk związanych z używaniem systemów komputerowych przez ludzi. Tworzymy aplikacje zorientowane na użytkownika zwracając przy tym szczególną uwagę na design, user experience oraz wysoką użyteczność i dostępność produktu końcowego. Działamy przy Wydziale Zarządzania i Komunikacji Społecznej Uniwersytetu Jagiellońskiego.</p>
+    <h1 id="landing-page">
+      <em>Epicentrum</em> to koło naukowe<br> zrzeszające studentów kierunku<br> elektroniczne przetwarzanie informacji
+    </h1>
+    <p id="welcome-text">
+      Zajmujemy się projektowaniem interfejsów oraz badaniem i opisywaniem zjawisk związanych z używaniem systemów komputerowych przez ludzi. Tworzymy aplikacje zorientowane na użytkownika zwracając przy tym szczególną uwagę na design, user experience oraz wysoką użyteczność i dostępność produktu końcowego. Działamy przy Wydziale Zarządzania i Komunikacji Społecznej Uniwersytetu Jagiellońskiego.
+    </p>
     <a href="about.html" class="button-filled">Dowiedz się więcej</a>
     <a href="contact.html" class="button-transparent">Dołącz do nas</a>
   </div>
