--- a/about.html
+++ b/about.html
@@ -4,10 +4,11 @@ layout: default
 <section>
   <div class="row small-collapse large-uncollapse">
     <div class="large-8 columns">
-      <h1>Historia</h1>
+      <h1>O nas</h1>
       <p>
         Koło naukowe Epicentrum powstało na przełomie marca i kwietnia 2006 roku z inicjatywy grupy studentów drugiego roku kierunku Kulturoznawstwo o specjalności Elektroniczne Przetwarzanie Informacji. W **** roku kierunek ten zmienił swoją nazwę i obecnie korzysta z miana samej specjalności.
       </p>
+      <img src="img/about/epicentrum_photo_collage.jpg" alt="Kolaż wykonany ze zdjęć z warsztatów Epicentrum">
       <p>
         Pierwszym opiekunem naukowym koła został prof. dr hab. Wiesław Lubaszewski, to właśnie pod jego pieczą stanowisko prezesa koła sprawowała Joanna Bukowska-Palarz. W tym czasie powstało także logo i pieczęć koła, które zaprojektował ****.
       </p>
@@ -32,46 +33,55 @@ layout: default
     </div>
 
     <div class="large-4 columns">
-      <h1>O nas</h1>
+      <h1>Zarząd</h1>
       <p>
-        <b>Opiekun naukowy koła:</b><br>
-        mgr inż. Aleksander Smywiński-Pohl
+        <b>Opiekun naukowy koła</b><br>
+        mgr inż. Aleksander Smywiński-Pohl<br><br>
+
+        <b>Prezes</b><br>
+        Damian Kałwa<br>
+        <a href="mailto:dkalwa@gmail.com">dkalwa@gmail.com</a><br><br>
+
+        <b>Pełnomocnik ds. organizacyjnych</b><br>
+        Kinga Cepielik<br>
+        <a href="mailto:kingacepielik@gmail.com">kingacepielik@gmail.com</a><br><br>
+
+        <b>Pełnomocnik ds. naukowych</b><br>
+        Ryszard Czernecki<br>
+        <a href="mailto:raczernecki@gmail.com">raczernecki@gmail.com</a><br><br>
+
+        <b>Sekretarz</b><br>
+        Julia Pukalska<br>
+        <a href="mailto:jpukalska@gmail.com">jpukalska@gmail.com</a><br><br>
+
+        <b>Skarbnik</b><br>
+        Anna Bogusz<br>
+        <a href="mailto:ania.bogusz@student.uj.edu.pl">ania.bogusz@student.uj.edu.pl</a>
       </p>
 
-      <p>
-        <b>Zarząd koła:</b><br>
-        Prezes: Damian Kałwa <a href="mailto:dkalwa@gmail.com">dkalwa@gmail.com</a><br>
-        Pełnomocnik ds. organizacyjnych: Kinga Cepielik<br>
-        Pełnomocnik ds. naukowych: Ryszard Czernecki<br>
-        Sekretarz: Julia Pukalska<br>
-        Skarbnik: Anna Bogusz
-      </p>
-
-      <p>
-        <b>Członkowie koła:</b>
-        <ol>
-          <li>Agata Redyk</li>
-          <li>Agnieszka Rączka</li>
-          <li>Anna Bogusz</li>
-          <li>Anna Wróbel</li>
-          <li>Damian Kałwa</li>
-          <li>Dorota Kuśmierz</li>
-          <li>Grzesiek Stefański</li>
-          <li>Iwona Guguła</li>
-          <li>Joanna Jadach</li>
-          <li>Joanna Sierant</li>
-          <li>Jola Klima</li>
-          <li>Julka Puk</li>
-          <li>Justyna Rząca</li>
-          <li>Karolina Piekarz</li>
-          <li>Kasia Sordyl</li>
-          <li>Kinga Cepielik</li>
-          <li>Rafał Trzop</li>
-          <li>Ryszard Czernecki</li>
-          <li>Urszula Witkowicz</li>
-          <li>Zuza Drohomirecka</li>
-        </ol>
-      </p>
+      <h1>Członkowie</h1>
+      <ol id="members">
+        <li>Agata Redyk</li>
+        <li>Agnieszka Rączka</li>
+        <li>Anna Bogusz</li>
+        <li>Anna Wróbel</li>
+        <li>Damian Kałwa</li>
+        <li>Dorota Kuśmierz</li>
+        <li>Grzesiek Stefański</li>
+        <li>Iwona Guguła</li>
+        <li>Joanna Jadach</li>
+        <li>Joanna Sierant</li>
+        <li>Jola Klima</li>
+        <li>Julia Pukalska</li>
+        <li>Justyna Rząca</li>
+        <li>Karolina Piekarz</li>
+        <li>Kasia Sordyl</li>
+        <li>Kinga Cepielik</li>
+        <li>Rafał Trzop</li>
+        <li>Ryszard Czernecki</li>
+        <li>Urszula Witkowicz</li>
+        <li>Zuza Drohomirecka</li>
+      </ol>
     </div>
   </div>
 </section>
