Add unordered list

--- a/about.html
+++ b/about.html
@@ -17,14 +17,13 @@ layout: default
       </p>
 
       <h1>Cele koła</h1>
-      <p>
-        Celami Koła są:<br>
-        a) poszerzanie wiedzy i umiejętności studentów<br>
-        b) pomoc w nauce i rozwój form samokształcenia<br>
-        c) rozwijanie zainteresowań naukowych studentów<br>
-        d) wdrażanie studentów do pracy naukowej i badawczej<br>
-        e) zwiększanie możliwości dostępu do nowych technologii
-      </p>
+      <ul id="goals">
+        <li>poszerzanie wiedzy i umiejętności studentów</li>
+        <li>pomoc w nauce i rozwój form samokształcenia</li>
+        <li>rozwijanie zainteresowań naukowych studentów</li>
+        <li>wdrażanie studentów do pracy naukowej i badawczej</li>
+        <li>zwiększanie możliwości dostępu do nowych technologii</li>
+      </ul>
 
       <h1>Sekcje</h1>
       <p>
