Update about page

--- a/about.html
+++ b/about.html
@@ -6,14 +6,11 @@ layout: default
     <div class="large-8 columns">
       <h1>O nas</h1>
       <p>
-        Koło naukowe Epicentrum powstało na przełomie marca i kwietnia 2006 roku z inicjatywy grupy studentów drugiego roku kierunku Kulturoznawstwo o specjalności Elektroniczne Przetwarzanie Informacji. W **** roku kierunek ten zmienił swoją nazwę i obecnie korzysta z miana samej specjalności.
+        Koło naukowe Epicentrum powstało na przełomie marca i kwietnia 2006 roku z inicjatywy grupy studentów drugiego roku kierunku Kulturoznawstwo o specjalności Elektroniczne Przetwarzanie Informacji. Obecnie kierunek ten zmienił swoją nazwę i korzysta z tytułu samej specjalności.
       </p>
       <img src="img/about/epicentrum_photo_collage.jpg" alt="Kolaż wykonany ze zdjęć z warsztatów Epicentrum">
       <p>
-        Pierwszym opiekunem naukowym koła został prof. dr hab. Wiesław Lubaszewski, to właśnie pod jego pieczą stanowisko prezesa koła sprawowała Joanna Bukowska-Palarz. W tym czasie powstało także logo i pieczęć koła, które zaprojektował ****.
-      </p>
-      <p>
-        Od wiosny 2012 roku organizujemy spotkania ze specjalistami branży interaktywnej i IT pod szyldem wydarzeń o nazwie Epizody. W 2015 roku powstała zupełnie nowa strona internetowa koła. Koło działa nieprzerwanie do dnia dzisiejszego.
+        Pierwszym opiekunem naukowym koła został prof. dr hab. Wiesław Lubaszewski, to właśnie pod jego pieczą stanowisko prezesa koła sprawowała Joanna Bukowska-Palarz. Pozostałymi członkami zarządu i współzałożycielami koła byli: Hanna Kułakowska, Marcin Lewandowski, Maciej Dubiński i Jadwiga Sitnicka.
       </p>
 
       <h1>Cele koła</h1>
@@ -27,7 +24,7 @@ layout: default
 
       <h1>Sekcje</h1>
       <p>
-        Koło opera swoją działalność na sekcjach. Sekcja jest powoływana do zrealizowania konkretnego projektu. Działalność sekcji może mieć charakter długoterminowy w przypadku projektów realizowanych cyklicznie, lub jednorazowy, wtedy zostaje ona rozwiązana bezpośrednio po zakończeniu projektu. Konsultantem naukowym sekcji może być pracownik naukowy lub doktorant dowolnej uczelni.
+        Koło opera swoją działalność na sekcjach. Każda z nich jest powoływana do zrealizowania konkretnego zadania. Działalność sekcji może mieć charakter długoterminowy w przypadku projektów realizowanych cyklicznie, lub jednorazowy, wtedy zostaje ona rozwiązana bezpośrednio po zakończeniu projektu. Konsultantem naukowym danej sekcji może być pracownik naukowy lub doktorant dowolnej uczelni.
       </p>
     </div>
 
