Add target blank attribute to anchors

--- a/contact.html
+++ b/contact.html
@@ -27,9 +27,9 @@ layout: default
     <div class="large-4 columns">
       <h1>My w sieci</h1>
       <p>
-        Facebook koła: <a href="http://www.facebook.com/kn.epicentrum">fb.com/kn.epicentrum</a><br>
-        Facebook EPI UJ: <a href="http://www.facebook.com/epi.uj">fb.com/epi.uj</a><br>
-        Strona kierunku: <a href="http://www.epi.uj.edu.pl">epi.uj.edu.pl</a>
+        Facebook koła: <a href="http://www.facebook.com/kn.epicentrum" target="_blank">fb.com/kn.epicentrum</a><br>
+        Facebook EPI UJ: <a href="http://www.facebook.com/epi.uj" target="_blank">fb.com/epi.uj</a><br>
+        Strona kierunku: <a href="http://www.epi.uj.edu.pl" target="_blank">epi.uj.edu.pl</a>
       </p>
     </div>
   </div>
