--- a/files.html
+++ b/files.html
@@ -6,7 +6,7 @@ layout: default
     <div class="large-6 columns">
       <h1>Statut koła</h1>
       <p>
-        Statut to najważniejszy z aktów prawnych każdego koła naukowego regulujący zadania, strukturę organizacyjną i sposób działania. Nasz statut znajdziesz tutaj w <a href="download/Statut%20koła%20naukowego%20Epicentrum.pdf">formacie PDF</a> oraz <a href="download/Statut%20koła%20naukowego%20Epicentrum.docx">DOCX</a> umożliwiającym edycje.
+        Statut to najważniejszy z aktów prawnych każdego koła naukowego regulujący zadania, strukturę organizacyjną i sposób działania. Nasz statut znajdziesz tutaj w <a href="download/Statut%20koła%20naukowego%20Epicentrum.pdf" target="_blank">formacie PDF</a> oraz <a href="download/Statut%20koła%20naukowego%20Epicentrum.docx">DOCX</a> umożliwiającym edycje.
       </p>
     </div>
 
@@ -25,7 +25,7 @@ layout: default
     <div class="large-6 columns">
       <h1>Pliki źródłowe</h1>
       <p>
-        Źródła większości z naszych projektów typu open source znajdziesz na stronie <a href="http://github.com/epicentrum">organizacji Epicentrum</a> w serwisie GitHub. Jest tam nawet kod strony, którą właśnie czytasz. Zachęcamy do wsparcia naszych projektów zarówno swoim czasem jak i wiedzą.
+        Źródła większości z naszych projektów typu open source znajdziesz na stronie <a href="http://github.com/epicentrum" target="_blank">organizacji Epicentrum</a> w serwisie GitHub. Jest tam nawet kod strony, którą właśnie czytasz. Zachęcamy do wsparcia naszych projektów zarówno swoim czasem jak i wiedzą.
       </p>
     </div>
   </div>
