Update email address

--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@ layout: default
         Masz pomysł na prelekcję?<br>
         A może chciałbyś zostać naszym sponsorem?
       </p>
-      <p>E-mail: <a href="mailto:kn.epicentrum@gmail.com">kn.epicentrum@gmail.com</a></p>
+      <p>E-mail: <a href="mailto:skn.epicentrum@gmail.com">skn.epicentrum@gmail.com</a></p>
     </div>
 
     <div class="large-4 columns">
