Finish up projects page

--- a/projects.html
+++ b/projects.html
@@ -3,8 +3,36 @@ layout: default
 ---
 <section>
   <div class="row small-collapse large-uncollapse">
-    <div class="large-4 columns">
-      <h1>Projekty</h1>
+    <div class="large-6 columns">
+      <h1>Epizody</h1>
+      <p>
+        Od kwietnia 2012 roku organizujemy spotkania ze specjalistami branży interaktywnej i IT pod szyldem wydarzeń o nazwie Epizody. Nasi goście, w tym liczna grupa absolwentów kierunku EPI, poruszają na kolejnych prelekcjach różnorodne tematy &mdash; począwszy od sposobów zarządzania projektem i kontaktów agencji z klientami poprzez tworzenie stron www oraz aplikacji mobilnych aż po grafikę dwu- i trójwymiarową oraz programowanie.
+      </p>
+      <p>
+        <a href="http://www.facebook.com/EpizodyIT" target="_blank">www.facebook.com/EpizodyIT</a>
+      </p>
+    </div>
+
+    <div class="large-6 columns">
+      <h1>Witajcie w realu_</h1>
+      <p>
+        Witajcie w realu_ to zainspirowany szwedzką szkołą Hyper Island studencki projekt edukacyjny, mający na celu poszerzenie wiedzy z zakresu nowych mediów o taką, której nie można zdobyć na studiach. Projekt rozpoczął swoją działalność w maju 2007 roku. Na spotkania zapraszani są przedstawiciele branży interaktywnej &mdash; dyrektorzy, menedżerowie, projektanci. Goście dzielą się swoją wiedzą i doświadczeniem podczas wykładu, którego temat sami wcześniej wybierają. Projekt został zakończony w lipcu 2013 roku.
+      </p>
+      <p>
+        <a href="http://www.facebook.com/witajciewrealu" target="_blank">www.facebook.com/witajciewrealu</a>
+      </p>
+    </div>
+  </div>
+
+  <div class="row small-collapse large-uncollapse">
+    <div class="large-6 columns">
+      <h1>Krakowska Konferencja Kognitywistyczna</h1>
+      <p>
+        Krakowska Konferencja Kognitywistyczna jest współorganizowana przez kilka kół naukowych z różnych uczelni w Krakowie. Skierowana jest przede wszystkim do studentów i młodych naukowców, przedstawicieli różnych dyscyplin, wchodzących w zakres szeroko rozumianych nauk kognitywnych: psychologii, filozofii, informatyki, neurobiologii, językoznawstwa, antropologii i innych. Celem konferencji jest nie tylko prezentacja obecnego stanu badań w naukach kognitywnych w Polsce i dyskusja nad ich wynikami, ale także wspieranie integracji tych nauk i konsolidacji środowiska badaczy.
+      </p>
+      <p>
+        <a href="http://kognitywistyka.eu" target="_blank">www.kognitywistyka.eu</a>
+      </p>
     </div>
   </div>
 </section>
