Add end class for incomplete rows

--- a/files.html
+++ b/files.html
@@ -22,7 +22,7 @@ layout: default
   </div>
 
   <div class="row small-collapse large-uncollapse">
-    <div class="large-6 columns">
+    <div class="large-6 columns end">
       <h1>Pliki źródłowe</h1>
       <p>
         Źródła większości z naszych projektów typu open source znajdziesz na stronie <a href="http://github.com/epicentrum" target="_blank">organizacji Epicentrum</a> w serwisie GitHub. Jest tam nawet kod strony, którą właśnie czytasz. Zachęcamy do wsparcia naszych projektów zarówno swoim czasem jak i wiedzą.
