--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@ layout: default
   </div>
 
   <div class="row small-collapse large-uncollapse">
-    <div class="large-6 columns">
+    <div class="large-6 columns end">
       <h1>Krakowska Konferencja Kognitywistyczna</h1>
       <p>
         Krakowska Konferencja Kognitywistyczna jest współorganizowana przez kilka kół naukowych z różnych uczelni w Krakowie. Skierowana jest przede wszystkim do studentów i młodych naukowców, przedstawicieli różnych dyscyplin, wchodzących w zakres szeroko rozumianych nauk kognitywnych: psychologii, filozofii, informatyki, neurobiologii, językoznawstwa, antropologii i innych. Celem konferencji jest nie tylko prezentacja obecnego stanu badań w naukach kognitywnych w Polsce i dyskusja nad ich wynikami, ale także wspieranie integracji tych nauk i konsolidacji środowiska badaczy.
