--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@ layout: default
 
       <h1>Sekcje</h1>
       <p>
-        Koło opera swoją działalność na sekcjach. Każda z nich jest powoływana do zrealizowania konkretnego zadania. Działalność sekcji może mieć charakter długoterminowy w przypadku projektów realizowanych cyklicznie, lub jednorazowy, wtedy zostaje ona rozwiązana bezpośrednio po zakończeniu projektu. Konsultantem naukowym danej sekcji może być pracownik naukowy lub doktorant dowolnej uczelni.
+        Koło opiera swoją działalność na sekcjach. Każda z nich jest powoływana do zrealizowania konkretnego zadania. Działalność sekcji może mieć charakter długoterminowy w przypadku projektów realizowanych cyklicznie, lub jednorazowy, wtedy zostaje ona rozwiązana bezpośrednio po zakończeniu projektu. Konsultantem naukowym danej sekcji może być pracownik naukowy lub doktorant dowolnej uczelni.
       </p>
     </div>
 
